--- a/index.css
+++ b/index.css
@@ -6,14 +6,16 @@
 body{
     color: #333333;
     font-family: "Open Sans", sans-serif;
+    background-image: url(https://efacility.jamb.gov.ng/assets/admin/pages/media/bg/3.jpg);
 }
 .logo{
     text-align: center;
 }
 .content{
-    border: solid;
+    /* border: solid; */
     width: 360px;
     margin: 0 auto;
+    padding: 30px;
 }
 .content h3{
     /* border: solid; */
@@ -26,14 +28,69 @@ body{
 .content form{
     /* border: solid; */
     line-height: 1.5;
-    
-
 }
+.content .email{
+    display: flex;
+}
+.content .email img{
+    /* border: solid; */
+    height: 18px;
+}
+
 .content .email input{
     border: 1px solid;
     width: 100%;
+    border: 1px solid white;
 }
 .content .password input{
-    border: 1px solid;
+    border: 1px solid white;
     width: 100%;
+     
+}
+.button{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 10px;
+}
+   
+.button button{
+    border: none;
+    background-color: #3598dc;
+    padding: 7px 14px;
+    color: white;
+    font-size: 14px;
+}
+.paragraph{
+    /* border: solid; */
+    margin-top: 10px;
+    display: flex;
+    border-top: 1px dotted white;
+    font-size: 13px;
+    padding: 10px 0;
+    
+}
+.paragraph a{
+    text-decoration: none;
+    background-color: #428bca;
+    color: white;
+    width: 40%;
+    margin-left: 5px;
+    height: 30px;
+    padding: 5px;
+}
+.forgotPassword h4{
+    text-transform: capitalize;
+    font-size: 17px;
+    color: #333;
+    font-weight: 300;
+    margin-bottom: 10px;
+}
+.forgotPassword p a{
+    /* border: solid; */
+    background-color: #45B6AF;
+    text-decoration: none;
+    color: white;
+    padding: 4px 10px 5px 10px;
+    font-size: 13px;
+    line-height: 1.5;
 }
