--- a/index.css
+++ b/index.css
@@ -4,18 +4,26 @@
     box-sizing: border-box;
 }
 body{
+    display: flex;
+    justify-content: center;
+    /* border: solid; */
     color: #333333;
     font-family: "Open Sans", sans-serif;
-    background-image: url(https://efacility.jamb.gov.ng/assets/admin/pages/media/bg/3.jpg);
+    background-image: url(https://efacility.jamb.gov.ng/assets/admin/pages/media/bg/4.jpg);
+    /* background-repeat: no-repeat; */
+    
 }
 .logo{
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin: 10px;
 }
 .content{
     /* border: solid; */
     width: 360px;
     margin: 0 auto;
     padding: 30px;
+    box-shadow: 2px 2px 3px gray, -2px -2px 3px gray;
 }
 .content h3{
     /* border: solid; */
@@ -27,10 +35,13 @@ body{
 }
 .content form{
     /* border: solid; */
-    line-height: 1.5;
+    line-height: 3;
 }
 .content .email{
     display: flex;
+    /* border: solid; */
+    height: 30px;
+    margin-bottom: 9px;
 }
 .content .email img{
     /* border: solid; */
@@ -38,14 +49,28 @@ body{
 }
 
 .content .email input{
-    border: 1px solid;
+    display: flex;
+    /* border: 1px solid; */
     width: 100%;
     border: 1px solid white;
+    height: 100%;
+    outline: none;
+}
+
+.content .password{
+    /* border: solid; */
+    height: 30px;
 }
 .content .password input{
+    display: flex;
     border: 1px solid white;
     width: 100%;
-     
+    height: 100%;
+    outline: none;
+}
+.content .email input::placeholder, .content .password input::placeholder{
+    font-size: 1rem;
+    padding: 5px;
 }
 .button{
     display: flex;
@@ -93,4 +118,12 @@ body{
     padding: 4px 10px 5px 10px;
     font-size: 13px;
     line-height: 1.5;
+}
+.end{
+    /* border: solid; */
+    display: flex;
+    justify-content: center;
+    color: #235b2b;
+    font-size: small;
+    margin-top: 10px;
 }
